src/sass/partials/_global.scss
*, 
*::before, 
*::after {
  box-sizing: border-box;
}

html:focus-within {
  scroll-behavior: smooth;
}

body,
h1,
h2,
h3,
h4,
p,
li {
  margin: 0;
}

body {
  min-height: 100vh;
  text-rendering: optimizeSpeed;
  position: relative;
  line-height: 1.5;
  font-family: $font-main;
  color: $clr-light;
  background-color: $clr-dark;
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url('../../images/background.jpg');
  background-repeat: no-repeat;
  background-position: top;
  background-size: cover, 100% 100vh;

  &.blur::after {
    position: fixed;
    inset: 0 0 0 0;
    content: '';
    width: 100%;
    background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));
    z-index: 2;
    animation: display-popup 1s forwards ease-in;
  }
}

input,
button {
  font: inherit;
}

.container {
  max-width: 1140px;
  margin: 0 auto;
  padding-inline: $gutter * 2;
}

section {
  display: none;
  padding-block: $gutter * 2;

  &.active {
    display: block;
  }
}

.btn-primary {
  @include text-format(1rem, 0.5, 700);
  padding: $gutter * 0.5 $gutter * 1.5;
  cursor: pointer;
  display: flex;
  max-width: 200px;
  background : $clr-primary;
  color: $clr-light;
  text-transform: uppercase;
  border: 0;
}

.buttons-box {
  display: flex;
  justify-content: space-around;
  margin: 0 auto;
  max-width: 500px;
}

